# myclaw

./: .gitignore  README.md  docker-compose.yml  langgraph.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt
.cursor/rules/: goal-autonomy-openclaw-loop.mdc  intent-decomposition-and-tooling.mdc  processing-without-env-toggles.mdc
apps/agent/: .env.example  README.md  a2a.py  agent.py  graph.py  models.py  package.json  pyproject.toml  requirements.txt
apps/agent/myclaw_agent/: embeddings.py  llm.py  runtime.py
apps/agent/src/myclaw_agent/: config.py  db.py  llm.py  models.py  retrieval.py  runnables.py  server.py
apps/memory-worker/: README.md  package.json  schema.sql  wrangler.toml
apps/memory-worker/src/: index.ts
apps/myclaw/: README.md  package.json
apps/myclaw/.myclaw/: memory.json
apps/myclaw/docs/: CONFIG_CHECKLIST.md  CURL_MCP_TELEGRAM_WEIGHT_PHOTO.md  LANGGRAPH_TELEGRAM_PHOTOS.md  MCP_LOGGING.md  MCP_TOOL_ALLOWLIST.md  TELEGRAM_PHOTO_FLOW.md  langgraph-mcp-servers.example.json
apps/myclaw/docs/snippets/: telegram-mcp-logging.example.ts
apps/myclaw/src/app/: layout.tsx  page.tsx
apps/myclaw/src/lib/: observability.ts
apps/myclaw/src/lib/agents/: registry.ts  types.ts
apps/myclaw/src/lib/goal/: injectMealPhotoActions.ts
apps/myclaw/src/lib/langgraph/: server.ts
apps/weight-management-mcp/: README.md  package.json  wrangler.toml
apps/weight-management-mcp/docs/: telegram-photos.md
apps/weight-management-mcp/migrations/: 0001_init.sql  0002_meal_analyses.sql  0003_yazio_surface.sql
apps/weight-management-mcp/src/: index.ts
(+15 files in other folders)
