[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "myclaw-agent-platform"
version = "0.0.0"
requires-python = ">=3.12"

# LangSmith Deployments typically installs Python deps from requirements.txt.
# This stanza exists to ensure `apps.*` is importable in that runtime.
dependencies = [
  "langgraph>=0.3,<0.4",
  "langchain-core>=0.3,<0.4",
  "langchain-openai>=0.2,<0.3",
  "pydantic>=2.8,<3",
  "SQLAlchemy>=2.0,<3",
  "psycopg[binary]>=3.2,<4",
  "pgvector>=0.3,<1",
]

[tool.setuptools.packages.find]
include = ["apps*"]

